public/css/app.css
body { padding: 45px 60px; padding-left: calc(var(--sidebar-width) + 60px); font-family: Poppins, sans-serif; font-size: 14px; font-weight: 400; line-height: 1.35; color: var(--color-black); background-color: #eff2ff; background-image: radial-gradient(circle, rgba(255, 255, 255, .9) 0%, #eff2ff 100%); background-size: 100% 190vh; background-position: center top -75vh; background-repeat: no-repeat; background-attachment: fixed; }

.not-yet-available { opacity: .2; pointer-events: none; }

/* Layout */
/* Layout: sidebar */
#sidebar { width: var(--sidebar-width); height: 100%; padding: 30px; padding-top: 35px; border-right: 1px solid var(--color-gray-light); position: fixed; top: 0; left: 0; }
#sidebar #brand-wrapper { display: block; height: 100px; }
#sidebar #brand-wrapper img { width: auto; height: 60px; }
/* Layout: sidebar: navigation */
#sidebar nav { font-weight: 400; }
#sidebar nav > ul > li { margin-bottom: 20px; border-radius: 10px; }
#sidebar nav > ul > li > a { display: flex; height: 45px; padding: 0 15px; align-items: center; font-size: .9rem; color: var(--color-gray-darker); transition: color .25s ease; }
#sidebar nav > ul > li > a i { display: inline-block; width: 30px; margin-right: 15px; font-size: 20px; text-align: center; }
#sidebar nav > ul > li > a:hover { color: var(--color-blue); }
#sidebar nav > ul > li > ul { display: none; padding-left: 45px; padding-bottom: 10px; }
#sidebar nav > ul > li > ul > li a { display: block; padding: 6px 10px; font-size: .85rem; color: var(--color-gray-darker); transition: color .25s ease; }
#sidebar nav > ul > li > ul > li a:hover { color: var(--color-blue); }
#sidebar nav > ul > li > ul > li.active a { font-weight: 600; color: var(--color-black); }
#sidebar nav > ul > li.active { background-color: #F8FAFF; box-shadow: 0 3px 15px 0 rgba(var(--shadow-rgb), .09); }
#sidebar nav > ul > li.active > a { color: var(--color-black); }
#sidebar nav > ul > li.active > ul { display: block; }
/* Layout: sidebar: quick actions */
#quick-actions { position: absolute; bottom: 40px; left: 40px; }
#quick-actions .toggle { display: grid; width: 50px; height: 50px; place-items: center; font-size: 24px; color: #fff; background-color: var(--color-blue); border-radius: 50%; box-shadow: 0 3px 15px rgba(var(--shadow-rgb), .35); transition: color .25s ease, background .25s ease, box-shadow .25s ease; }
#quick-actions .toggle i { transform: rotate(0deg); transition: transform .25s ease; }
#quick-actions .toggle:hover { background-color: var(--color-blue-faded); }
#quick-actions .actions { width: 200px; position: absolute; bottom: 100%; left: 100%; pointer-events: none; opacity: 0; transform: scale(0); transform-origin: bottom left; transition: opacity .25s ease, transform .25s ease; }
#quick-actions .actions > * { display: block; padding: 10px; margin-top: 12px; font-size: .9rem; font-weight: 400; text-align: center; background-color: var(--color-white); border-radius: 10px; box-shadow: 0 3px 10px rgba(var(--shadow-rgb), .1); cursor: pointer; transition: color .25s ease, background-color .25s ease, box-shadow .25s ease; }
#quick-actions .actions > *:hover { color: #fff; background-color: var(--color-blue); box-shadow: 0 3px 15px rgba(var(--shadow-rgb), .35); }
#quick-actions.open .toggle i { transform: rotate(45deg); }
#quick-actions .actions:focus-within,
#quick-actions.open .actions { opacity: 1; transform: scale(1); pointer-events: auto; }

/* Layout: top bar */
#top-bar { display: flex; justify-content: space-between; align-items: center; }
#top-bar-left-navigation { display: flex; gap: 30px; }
#navigation-toggle { display: none; margin-top: -.25rem; }
/* Layout: top bar: page tabs */
#page-tabs { display: flex; }
#page-tabs a { display: block; height: 28px; font-size: .95rem; font-weight: 400; color: var(--color-gray); transition: color .25s ease; }
#page-tabs li + li { margin-left: 45px; }
#page-tabs li:hover a { color: var(--color-black); }
#page-tabs li.active a { color: var(--color-black); border-bottom: 2px solid; }
/* Layout: top bar: global actions */
#global-actions { display: flex; align-items: center; }
#global-actions > * { display: inline-block; padding: 10px 12px; margin-left: 20px; font-size: 20px; color: var(--color-gray); cursor: pointer; transition: color .25s ease; position: relative; }
#global-actions > *:hover { color: var(--color-black); }
#global-actions > #profile-toggle { padding: 0; padding-left: 12px; font-size: 0; line-height: 0; }
#global-actions > #profile-toggle img { width: 34px; height: 34px; object-fit: cover; object-position: center; border-radius: 50%; }
#global-actions > #profile-toggle ul { font-size: .9rem; line-height: 1.3; color: var(--color-black); top: 100%; right: -5px; }

/* Layout: page wrapper */
#page-wrapper { margin-top: 40px; }
#page-content { min-height: calc(100vh - 300px); margin-top: 20px; }
#page-wrapper footer { display: flex; margin-top: 45px; justify-content: flex-end; gap: 1.5rem; text-align: right; font-size: .75rem; }
#page-wrapper footer a { color: var(--color-gray); }
#page-wrapper footer a:hover { text-decoration: underline; }

/* Page header */
#page-header { display: flex; justify-content: space-between; align-items: flex-end; }
#section-title { margin-bottom: 0; margin-top: -1em; font-size: 13px; font-weight: 400; line-height: 1; color: var(--color-gray); }
#section-title::after { content: '\f054'; margin-left: 5px; font-family: var(--fa-style-family); font-size: .7em; font-weight: 400; line-height: 1; position: relative; top: -1px; }
#section-title a:hover { text-decoration: underline; }
#page-actions { display: grid; grid-auto-flow: column; align-items: center; gap: 20px; }
#page-actions input { min-width: 225px; padding: 12px 16px; font-size: .8rem; font-weight: 400; line-height: 1; border-color: transparent; box-shadow: 0 2px 6px rgba(var(--shadow-rgb), .1); }
#page-actions input:focus { border-color: var(--color-gray-light); }
#page-actions input[type="button"],
#page-actions button,
#page-actions .button { padding: 13px 30px; }

@media (max-width: 1080px) {
	body { padding: 45px; }

	/* Navigation (sidebar) */
	#sidebar #brand-wrapper { display: none; }
	#navigation-toggle { display: block; position: relative; z-index: 101; }
	#sidebar { padding: 0; border: none; position: static; }
	#sidebar nav { width: 275px; padding: 45px 30px; padding-top: 130px; position: fixed; top: 0; bottom: 0; left: 0; background-color: var(--color-blue-lightest); box-shadow: 0 0 30px rgb(var(--shadow-rgb), .1); z-index: 100; transform: translateX(-305px); transition: transform .1s ease-in-out; }
	.navigation-open #sidebar nav { transform: translateX(0); transition: transform .25s ease-in-out; }
	#quick-actions { position: fixed; z-index: 99; }

	/* Top bar */
	#page-tabs { overflow: auto; }
	#global-actions > *:not(#profile-toggle) { display: none; }
}

@media (max-width: 767px) {
	:root { --grid-gap: 15px; }
	html { font-size: 90%; }
	body { padding: 15px; padding-bottom: 60px; }

	/* Navigation (sidebar) */
	#sidebar nav { max-width: 90%; padding: 15px; padding-top: 75px; }

	/* Top bar */
	#top-bar-left-navigation { gap: 15px; }
	#navigation-toggle { margin-top: 0; }
	#page-tabs { align-items: center; }
	#page-tabs a { height: auto; }
	#page-tabs li + li { margin-left: 15px; }
}

